# stardec

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: aggregation_functions.h  argument.h  argument.hpp  beta_mixture.hpp  decision_functions.h  decision_functions.hpp  dialogue.hpp  distance.h  evaluation_functions.h  evaluator.h  filter_functions.h  filter_functions.hpp  function_alias.hpp  function_struct.hpp  graph.h  graph.hpp  leaf_value.hpp  logicaloperator.h  node.h  node.hpp  parser.hpp  sequence.hpp  tree.h  tree.hpp  treebuilder.hpp  update_functions.h  update_functions.hpp  updater.hpp  valuation_functions.h  values.hpp
include/parser/: parser.hpp  parser_helper.hpp  parser_struct.hpp
include/templates/: node.tpp  tree.tpp
parser/: lexer.l  parser.ypp
resources/: Graph20.gfx  Graph26.gfx  graph.txt  graph_50_0_1.apx  vaccination.txt  values.csv
src/: argument.cpp  evaluator.cpp  graph.cpp  lexer.cpp  main.cpp  node.cpp  parser.cpp  tree.cpp
